syntax = "proto3";

option csharp_namespace = "WorkManagerProto";

package WorkManagerProto;

service DictionariesClient{
	rpc GetElements (GetElementsRequest) returns (GetElementsResponse);
	rpc GetById (GetByIdRequest) returns (GetByIdResponse);
	rpc DeleteById (DeleteByIdIdRequest) returns (DeleteByIdResponse);
}

message GetElementsRequest{
}

message GetElementsResponse{
	repeated Client clients = 1;
}

message GetByIdRequest{
	int32 id = 1;
}

message GetByIdResponse{
	Client client = 1;
}

message DeleteByIdIdRequest{
	int32 id = 1;
}

message DeleteByIdResponse{
}

message Client{
    int32 Id = 1;
    string FirstName = 2;
    string LastName = 3;
    string Email = 4;
    int32 Age = 5;
    string Company = 6;
}
